--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,4 +4,6 @@ jobs:
   dire_bonjour:
     runs-on: ubuntu-20.04
     steps:
-    - run: echo "Bonjour"
+      - uses: actions/checkout@v2
+      - run: make all
+      - run: ls -la
