--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,6 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - run: sudo apt-get update && sudo apt-get install -y asciidoctor
       - run: make all
       - run: ls -la
