--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: main CI
 on: [push]
 jobs:
-  dire_bonjour:
+  main-CI:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: sudo apt-get update && sudo apt-get install -y asciidoctor
       - run: make all
       - run: ls -la
-      - run: netlify deploy --dir=dist/
+      - run: netlify deploy --prod --dir=./dist/
