--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,5 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y asciidoctor
       - run: make all
       - run: ls -la
+      - run: netlify deploy --dir=./dist/
       - run: netlify deploy --prod --dir=./dist/
