login/status/deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,4 @@ jobs:
       - run: netlify login
       - run: netlify status
       - run: netlify sites:list
+      - run: netlify deploy --dir=./dist/
