--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ jobs:
   main-CI:
     runs-on: ubuntu-20.04
     steps:
+      
       - uses: actions/checkout@v2
       - run: sudo apt-get update && sudo apt-get install -y asciidoctor
       - run: make all
@@ -12,3 +13,6 @@ jobs:
       - run: netlify status
       - run: netlify sites:list
       - run: netlify deploy --dir=./dist/
+        env:
+          NETLIFY_AUTH_TOKEN:  ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{secrets.NETLIFY_SITE_ID}}
