--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - run: netlify login
       - run: netlify status
       - run: netlify sites:list
-      - run: netlify deploy --dir=./dist/
+      - run: netlify deploy --prod --dir=./dist/
         env:
           NETLIFY_AUTH_TOKEN:  ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{secrets.NETLIFY_SITE_ID}}
